--- a/main/templates/lounge/coding_lounge.html
+++ b/main/templates/lounge/coding_lounge.html
@@ -12,7 +12,7 @@
                 동영상으로 확인해보세요!
             </p>
         </div>
-        <img class="subVisual codingLounge" src="{% static 'resource/img/sub/sv_review.png" alt="코딩라운지">
+        <img class="subVisual codingLounge" src="{% static 'resource/img/sub/sv_review.png' %}" alt="코딩라운지">
     </div>
 </section>
 <!-- sub visual -->
@@ -30,15 +30,15 @@
                     </div>
                 </li>
             </ul>
-            <div class="paging_area">
-                <a><img src="{% static 'resource/img/sub/go_first.png' %}"></a>
-                <a><img src="{% static 'resource/img/sub/go_prev.png' %}"></a>
-                <a class="active">1</a>
-                <a>2</a>
-                <a>3</a>
-                <a><img src="{% static 'resource/img/sub/go_next.png' %}"></a>
-                <a><img src="{% static 'resource/img/sub/go_last.png' %}"></a>
-            </div>
+<!--            <div class="paging_area">-->
+<!--                <a><img src="{% static 'resource/img/sub/go_first.png' %}"></a>-->
+<!--                <a><img src="{% static 'resource/img/sub/go_prev.png' %}"></a>-->
+<!--                <a class="active">1</a>-->
+<!--                <a>2</a>-->
+<!--                <a>3</a>-->
+<!--                <a><img src="{% static 'resource/img/sub/go_next.png' %}"></a>-->
+<!--                <a><img src="{% static 'resource/img/sub/go_last.png' %}"></a>-->
+<!--            </div>-->
         </div>
 
 
