--- a/main/templates/login/login.html
+++ b/main/templates/login/login.html
@@ -10,7 +10,7 @@
         <form id="login_form" method="post" action="/login_form/">
              {% csrf_token %}
             <div class="input_area">
-                <input type="text" name="login_id" id="login_id" class="login_inp" placeholder="이메일을 입력해주세요." />
+                <input type="text" name="login_id" id="login_id" class="login_inp" placeholder="아이디를 입력해주세요." />
                 <input type="password" name="login_pass" id="login_pass" class="login_inp" placeholder="비밀번호를 입력해주세요." />
             </div>
         </form>
