--- a/main/templates/class/class_detail.html
+++ b/main/templates/class/class_detail.html
@@ -1,16 +1,15 @@
 {% load static %}
 {% include "common/header.html" %}
-<input type="hidden" id="clientId" name="clientId" value={{ request.session.client_id }}>
     <div class="wrap">
         <!-- sub visual -->
         <section class="sub_visual">
             <div class="section_wrap">
                 <div class="slogan">
                     <span class="bigSlg ck_title">
-                        스마트 휴지통
+                        {{prd_detail.title2}}
                     </span>
                     <div class="pageNav">
-                        <span>[아두이노 + AI]</span>
+                        <span>{{prd_detail.title3}}</span>
                     </div>
                 </div>
                 <img class="subVisual codingKit" src="{% static 'resource/img/sub/sv_codingKit.png' %}" alt="코딩키트">
@@ -45,89 +44,19 @@
                         <h3>커리큘럼</h3>
                         <div class="list_depth1">
                             <ul>
+                                {% for items_detail in class_items_detail %}
                                 <li>
                                     <p class="title">
-                                        <b>01.</b> 아두이노 설치 [환경구축]
+                                        <b>{{forloop.counter0}}) </b>{{items_detail.title}}
                                     </p>
-                                    <p class="time">00:03:00</p>
+                                    <p class="time">{{items_detail.time}}</p>
                                 </li>
-                                <li>
-                                    <p class="title">
-                                        <b>02.</b> 변수 [이론/문법]
-                                    </p>
-                                    <p class="time">00:08:00</p>
-                                </li>
-                                <li>
-                                    <p class="title">
-                                        <b>03.</b> 연산자 기초 [이론/문법]
-                                    </p>
-                                    <p class="time">00:07:00</p>
-                                </li>
-                                <li>
-                                    <p class="title">
-                                        <b>04.</b> 시리얼 모니터 [이론/문법]
-                                    </p>
-                                    <p class="time">00:04:00</p>
-                                </li>
-                                <li>
-                                    <p class="title">
-                                        <b>05.</b> 함수 [이론/문법]
-                                    </p>
-                                    <p class="time">00:09:00</p>
-                                </li>
-                                  <li>
-                                    <p class="title">
-                                        <b>06.</b> 조건문 if [이론/문법]
-                                    </p>
-                                    <p class="time">00:09:00</p>
-                                </li>
-                                  <li>
-                                    <p class="title">
-                                        <b>07.</b> 초음파 센서 [센서]
-                                    </p>
-                                    <p class="time">00:09:00</p>
-                                </li>
-                                  <li>
-                                    <p class="title">
-                                        <b>08.</b> 서보모터 [모터]
-                                    </p>
-                                    <p class="time">00:09:00</p>
-                                </li>
-                                  <li>
-                                    <p class="title">
-                                        <b>09.</b> Trashcan [키트만들기]
-                                    </p>
-                                    <p class="time">00:09:00</p>
-                                </li>
-                                <li>
-                                    <p class="title">
-                                        <b>10.</b> 인공지능 이란 [이론]
-                                    </p>
-                                    <p class="time">00:09:00</p>
-                                </li>
-                                  <li>
-                                    <p class="title">
-                                        <b>11.</b> AI 러닝봇 설치 [환경구축]
-                                    </p>
-                                    <p class="time">00:09:00</p>
-                                </li>
-                                  <li>
-                                    <p class="title">
-                                        <b>12.</b> AI Trashcan [키트만들기]
-                                    </p>
-                                    <p class="time">00:09:00</p>
-                                </li>
-                                  <li>
-                                    <p class="title">
-                                        <b>13.</b> AI 내가 만든 러닝봇 [활용]
-                                    </p>
-                                    <p class="time">00:09:00</p>
-                                </li>
+                                {% endfor %}
                             </ul>
                         </div>
                     </div>
                 </div>
-                <a href="lecture_list.html" class="btn list_more">목록으로</a>
+                <a href="/class/" class="btn list_more">목록으로</a>
             </div>
 
             <div class="filter_area detail">
@@ -140,21 +69,21 @@
                                     <span class="li_title">판매가</span>
                                     <form id="prd_form" method="post" action="/run_order/">
                                         {% csrf_token %}
-                                        <input type="hidden" id="prd_code" name="prd_code" value="aAt"> <!--arduino-AI-trashcan -->
+                                        <input type="hidden" id="prd_code" name="prd_code" value={{prd_detail.prd_code}}> <!--arduino-AI-trashcan -->
                                      </form>
-                                    <p><span class="price">45,000</span> won</p>
+                                    <p><span class="price">{{prd_detail.price}}</span> won</p>
                                 </li>
                                 <li>
                                     <span class="li_title">키트명</span>
-                                    <p>[아두이노 + AI] 스마트 휴지통</p>
+                                    <p>{{prd_detail.title}}</p>
                                 </li>
                                 <li>
                                     <span class="li_title">학습 목표</span>
-                                    <p>아두이노 환경구축, 활용<br> 인공지능 </p>
+                                    <p>{{prd_detail.goal}} </p>
                                 </li>
                                 <li>
                                     <span class="li_title">학습 기간</span>
-                                    <p>3개월</p>
+                                    <p>{{prd_detail.period}}개월</p>
                                 </li>
                             </ul>
                         </div>
