myprofile/myorder 추가

--- a/main/templates/common/header.html
+++ b/main/templates/common/header.html
@@ -68,13 +68,13 @@
                 <span class="userImg"><img src="{% static 'resource/img/sub/img_user.png' %}" alt="유저 프로필"></span>
                 <ul class="sub_menu">
                     <li>
-                        <a href="mypage.html">내 프로필</a>
+                        <a href="/myprofile/">내 프로필</a>
                     </li>
 <!--                    <li>-->
 <!--                        <a href="coupon.html">내 쿠폰</a>-->
 <!--                    </li>-->
                     <li>
-                        <a href="orderList.html">주문내역</a>
+                        <a href="/myorder/">주문내역</a>
                     </li>
                      <div id="logout" >
                         <li>
