--- a/main/templates/myclass/myclass.html
+++ b/main/templates/myclass/myclass.html
@@ -64,8 +64,8 @@
             </div>
         </div>
 
+        <div style="margin-top:50px"></div>
         {% include "common/footer.html" %}
-
 
     </div>
 
