--- a/main/templates/common/head.html
+++ b/main/templates/common/head.html
@@ -48,16 +48,11 @@
 
 <body oncontextmenu='return false' onselectstart='return false' ondragstart='return false'>
 
-    <div class="modal fade modal-content-box">
-      <div class="modal-dialog">
+    <div class="modal fade">
+      <div class="modal-dialog" style="max-width: 100%; width: auto; display: table;">
         <div id="res_msg" class="modal-content">
             <!-- remote ajax call이 되는영역 -->
         </div>
       </div>
     </div>
 
-<script>
-.modal-content-box {
-    box-sizing: content-box;
-
-</script>
