--- a/main/templates/common/head.html
+++ b/main/templates/common/head.html
@@ -49,47 +49,10 @@
 <body oncontextmenu='return false' onselectstart='return false' ondragstart='return false'>
 
     <div class="modal fade">
-      <div class="modal-dialog" style="width: auto; display: table;">
+      <div class="modal-dialog" style="max-width: 100%; width: auto; height: auto; display: table;">
         <div id="res_msg" class="modal-content">
             <!-- remote ajax call이 되는영역 -->
         </div>
       </div>
     </div>
 
-<script>
-
-    .modal {
-            display: none; /* Hidden by default */
-            position: fixed; /* Stay in place */
-            z-index: 1; /* Sit on top */
-            left: 0;
-            top: 0;
-            width: 100%; /* Full width */
-            height: 100%; /* Full height */
-            overflow: auto; /* Enable scroll if needed */
-            background-color: rgb(0,0,0); /* Fallback color */
-            background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
-        }
-
-        /* Modal Content/Box */
-        .modal-content {
-            background-color: #fefefe;
-            margin: 15% auto; /* 15% from the top and centered */
-            padding: 20px;
-            border: 1px solid #888;
-            width: 50%; /* Could be more or less, depending on screen size */
-        }
-        /* The Close Button */
-        .close {
-            color: #aaa;
-            float: right;
-            font-size: 28px;
-            font-weight: bold;
-        }
-        .close:hover,
-        .close:focus {
-            color: black;
-            text-decoration: none;
-            cursor: pointer;
-        }
-    </script>
