div box-size test

--- a/main/templates/common/head.html
+++ b/main/templates/common/head.html
@@ -48,8 +48,9 @@
 
 <body oncontextmenu='return false' onselectstart='return false' ondragstart='return false'>
 
+
     <div class="modal fade">
-      <div class="modal-dialog" >
+      <div class="modal-dialog" style="max-width: 767px">
         <div id="res_msg" class="modal-content">
             <!-- remote ajax call이 되는영역 -->
         </div>
