--- a/main/templates/common/head.html
+++ b/main/templates/common/head.html
@@ -50,7 +50,7 @@
 
 
     <div class="modal fade">
-      <div class="modal-dialog" style="max-width: 767px">
+      <div class="modal-dialog" style="box-sizing: border-box;">
         <div id="res_msg" class="modal-content">
             <!-- remote ajax call이 되는영역 -->
         </div>
